Fix issue with non-aligned button icon in pickadate

--- a/assets/src/less/plugins/restaurant-reservations.less
+++ b/assets/src/less/plugins/restaurant-reservations.less
@@ -156,6 +156,13 @@
 		border-bottom-left-radius: 5px;
 		border-bottom-right-radius: 5px;
 	}
+
+	// Circle around close button
+	.picker__footer .picker__button--close:before {
+		border: none;
+		height: auto;
+		line-height: inherit;
+	}
 }
 
 // Swap out icons based on background color
